--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,17 +7,17 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Import" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_newpath"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="New Path" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_mypaths"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="My Path" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_games"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Games" />
     </group>
 
     <item android:title="Communicate">
