--- a/app/src/main/res/layout/new_path.xml
+++ b/app/src/main/res/layout/new_path.xml
@@ -3,4 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Choose Template"
+        android:id="@+id/button4"
+        android:layout_marginTop="50dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Upload Path"
+        android:id="@+id/button5"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
