--- a/app/src/main/res/layout/games.xml
+++ b/app/src/main/res/layout/games.xml
@@ -3,10 +3,32 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/l1"
-    />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/l1"
+            android:id="@+id/imageView2"
+            android:layout_gravity="center" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="74dp"
+            android:layout_height="66dp"
+            android:text="@string/rightButton"
+            android:id="@+id/button6"
+            android:layout_gravity="right|bottom" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="69dp"
+            android:layout_height="66dp"
+            android:text="@string/leftButton"
+            android:id="@+id/button7"
+            android:layout_gravity="left|bottom" />
+
+    </FrameLayout>
 </LinearLayout>
