--- a/app/src/main/res/layout/custom_path.xml
+++ b/app/src/main/res/layout/custom_path.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imgView"
+        android:layout_weight="1" />
+
 </LinearLayout>
